STAR-632: added email endpoint
